--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     Hello world!
     
-    <img src='/puppy.jpg" alt="dog"
+    <img src='puppy.jpg" alt="dog"
               
   </body>
 </html>
